--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@
   text-align: center;
 }
 
+.container {
+  padding: 1rem;
+  width: 100%;
+  justify-content: center;
+  border: 2px solid #cffafe;
+  border-radius: 1rem;
+  min-height: 75vh;
+}
 /* .logo {
   height: 6em;
   padding: 1.5em;
